--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset=utf-8>
   <title>Yodlr Design Challenge</title>
 </head>
+
 <body>
   <h1>Yodlr Design Challenge</h1>
   <p>
-    <a href="/signup.html">Registration Page</a><br/>
+    <a href="/signup.html">Registration Page</a>
+    <br/>
     <a href="/admin.html">Admin Page</a>
   </p>
+  <script src="/js/bundle.js"></script>
 </body>
+
 </html>
